--- a/.github/workflows/Studentmlprojectregression-main/.github/workflows/Old_gempriceprediction.yml
+++ b/.github/workflows/Studentmlprojectregression-main/.github/workflows/Old_gempriceprediction.yml
@@ -2,14 +2,14 @@
 # More GitHub Actions for Azure: https://github.com/Azure/actions
 # More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - gempriceprediction
+#name: Build and deploy Python app to Azure Web App - gempriceprediction
 
-on:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
-
+#on:
+ # push:
+   # branches:
+     # - main
+  #workflow_dispatch:
+""
 jobs:
   build:
     runs-on: ubuntu-latest
