--- a/.github/workflows/main_gempriceprediction.yml
+++ b/.github/workflows/main_gempriceprediction.yml
@@ -1,7 +1,7 @@
 # GitHub Actions workflow to build and deploy a Python app to Azure Web App
 # Using Azure Service Principal authentication (no publish profile needed)
 
-name: Build and deploy Python app to Azure Web App - gempriceprediction
+name: Build and deploy Python app to Azure Web App - gemprediction
 
 on:
   push:
