Move workflow to correct GitHub Actions folder

--- a/.github/workflows/main_gempriceprediction.yml
+++ b/.github/workflows/main_gempriceprediction.yml
@@ -1,7 +1,8 @@
-# GitHub Actions workflow to build and deploy a Python app to Azure Web App
-# Using Azure Service Principal authentication (no publish profile needed)
+# Docs for the Azure Web Apps Deploy action: https://github.com/Azure/webapps-deploy
+# More GitHub Actions for Azure: https://github.com/Azure/actions
+# More info on Python, GitHub Actions, and Azure App Service: https://aka.ms/python-webapps-actions
 
-name: Build and deploy Python app to Azure Web App - gemprediction
+name: Build and deploy Python app to Azure Web App - gempriceprediction
 
 on:
   push:
@@ -21,18 +22,22 @@ jobs:
         with:
           python-version: '3.8'
 
-      - name: Install dependencies
+      - name: Create and start virtual environment
         run: |
           python -m venv venv
           source venv/bin/activate
-          pip install -r requirements.txt
-
+      
+      - name: Install dependencies
+        run: pip install -r requirements.txt
+        
+      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      
       - name: Upload artifact for deployment jobs
         uses: actions/upload-artifact@v2
         with:
           name: python-app
           path: |
-            .
+            . 
             !venv/
 
   deploy:
@@ -40,6 +45,7 @@ jobs:
     needs: build
     environment:
       name: 'Production'
+      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
       - name: Download artifact from build job
